add session test

--- a/waffle-example-ui/src/app/app.component.html
+++ b/waffle-example-ui/src/app/app.component.html
@@ -7,5 +7,7 @@
     UserInfo: {{ userInfo }}
  </h1>
   <h1> {{env}} </h1>
+  
+  <button mat-button (click)="handleClick($event)">Click me!</button>
 </div>
 
